# ai-game-playtesting-agent

./: .env.example  .gitignore  README.md  game_evolution.md  plan.md  pyproject.toml
examples/campaign_20260524201909/: playtest_summary.md
examples/campaign_20260524201909/20260524201909/: playtest_report.json  turn_log.jsonl
examples/campaign_20260524201909/20260524202005/: playtest_report.json  turn_log.jsonl
examples/campaign_20260524201909/20260524202057/: playtest_report.json  turn_log.jsonl
reports/: sample_playtest_report.md
src/ai_game_playtesting_agent/: __init__.py  browser.py  config.py  events.py  graph.py  main.py  models.py  report.py  sessions.py  vision.py
src/playtesting_agent/: __init__.py  browser.py  config.py  events.py  graph.py  main.py  report.py  sessions.py  vision.py
