[project]
name = "playtesting-agent"
version = "0.1.0"
description = "Autonomous 2048 playtesting agent with GPT-4o vision and LangGraph"
readme = "README.md"
authors = [
    { name = "ysskrishna", email = "sivasaikrishnassk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "playwright>=1.49",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
playtest = "playtesting_agent.main:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
